--- a/app/src/main/res/layout/item_news_relevansi.xml
+++ b/app/src/main/res/layout/item_news_relevansi.xml
@@ -9,7 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="5dp">
 
         <ImageView
             android:id="@+id/img_item_news"
