--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -23,10 +23,16 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/calendarview">
+        <ImageView
+            android:id="@+id/stunting_indicator"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="8dp"/>
         <TextView
+            android:id="@+id/stunting_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Stunting"
+            android:text="Status"
             android:layout_weight="4"/>
         <Spinner
             android:id="@+id/choose_child"
